--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Proyecto 1.
+application.title=Proyecto 1
 application.vendor=Antonella
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,20 +29,22 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Proyecto_1..jar
+dist.jar=${dist.dir}/Proyecto_1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Proyecto_1.
+dist.jlink.output=${dist.jlink.dir}/Proyecto_1
 endorsed.classpath=
 excludes=
-file.reference.gs-core-2.0.jar=..\\..\\..\\..\\Downloads\\gs-core-2.0.jar
+file.reference.AbsoluteLayout.jar=..\\..\\..\\..\\Downloads\\JavaFX\\absolutelayout\\AbsoluteLayout.jar
+file.reference.gs-core-2.0.jar-1=Libreria\\gs-core-2.0.jar
 file.reference.gs-ui-swing-2.0.jar=Libreria\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gs-ui-swing-2.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.gs-core-2.0.jar}
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,8 +79,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Proyecto_1.
-main.class=proyecto.pkg1.Proyecto1
+jlink.launcher.name=Proyecto_1
+main.class=Interfaces.GrafoVisual
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
